--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gitbook-cli": "^1.0.0",
     "gitbook-plugin-footnote-string-to-number": "^0.0.1",
     "gitbook-plugin-include-codeblock": "^1.5.0",
-    "gitbook-plugin-japanese-support": "0.0.1"
+    "gitbook-plugin-japanese-support": "0.0.1",
+    "gitbook-plugin-katex": "^1.1.3"
   }
 }
